--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -4,15 +4,15 @@ include *.json
 include *.md
 include *.py
 include *.txt
-recursive-include zynox *.css
-recursive-include zynox *.csv
-recursive-include zynox *.html
-recursive-include zynox *.ico
-recursive-include zynox *.js
-recursive-include zynox *.json
-recursive-include zynox *.md
-recursive-include zynox *.png
-recursive-include zynox *.py
-recursive-include zynox *.svg
-recursive-include zynox *.txt
-recursive-exclude zynox *.pyc
+recursive-include zynox_flex *.css
+recursive-include zynox_flex *.csv
+recursive-include zynox_flex *.html
+recursive-include zynox_flex *.ico
+recursive-include zynox_flex *.js
+recursive-include zynox_flex *.json
+recursive-include zynox_flex *.md
+recursive-include zynox_flex *.png
+recursive-include zynox_flex *.py
+recursive-include zynox_flex *.svg
+recursive-include zynox_flex *.txt
+recursive-exclude zynox_flex *.pyc
